Astro/astro-tests/testData/codeInsight/highlighting/quickFix/autoImport/index.astro
---
---

<div>
  <<error descr="Astro: Cannot find name 'MyComponent'.">MyComponent<caret></error> />
</div>
